# sessionxray

./: .gitattributes  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  mirror.yml
hooks/: sessionxray-sessionend.sh
sessionxray/: __init__.py  cli.py  discovery.py  finding.py  grade.py  report.py  scanner.py
sessionxray/rules/: __init__.py  _util.py  destructive.py  filesystem.py  injection.py  network.py  persistence.py  remote_code.py  secrets.py
tests/: _helpers.py  test_corpus.py  test_engine.py  test_hook.py  test_parser.py  test_paths_posix.py  test_rules.py
tests/fixtures/benign/: benign-session.jsonl  benign-web-research.jsonl
tests/fixtures/malformed/: malformed-lines.jsonl
tests/fixtures/malicious/: destructive.jsonl  filesystem-reach.jsonl  injection-exposure.jsonl  network-egress.jsonl  persistence.jsonl  remote-code.jsonl  secrets.jsonl
