[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sessionxray"
version = "0.1.0"
description = "Audit a Claude Code session transcript for what the agent actually touched: filesystem reach, destructive commands, credential access, network egress, remote code, persistence, and prompt-injection exposure."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Cole Munz" }]
dependencies = []
keywords = ["claude-code", "agent", "security", "audit", "session", "transcript",
            "prompt-injection", "sast", "static-analysis"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/munzzyy/sessionxray"
Issues = "https://github.com/munzzyy/sessionxray/issues"

[project.scripts]
sessionxray = "sessionxray.cli:main"

[tool.setuptools.packages.find]
include = ["sessionxray*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
